# transformers-systems-lab

./: .gitignore  .gitleaks.toml  README.md  m1a_real.py  pyproject.toml
.github/workflows/: lab-ci.yml
bench/: contract.py
fixtures/: r1_tiny.py
kernels/: flash_attn.py
model/: r1.py
r0/: build_r0.py  manifest.yml
r0/data/: train_batches.npy
r0/tokenizer/: tokenizer.json
scenarios/: r1-tiny-train.yml
serve/: paged_kv.py
tests/: test_flash_attn.py  test_numbers_contract.py  test_paged_kv.py  test_r0_batches.py  test_r1_module.py  test_r1_tiny_fixture.py
vlm/: spike.py
